готова галерея на чистом js  изображения пока не перетаскиваются

--- a/src/html/components/gallery.html
+++ b/src/html/components/gallery.html
@@ -1,9 +1,26 @@
-<div class="gallery">
+<div class="gallery gallery_js">
   <div class="container">
     <div class="gallery__block">
-      <div class="gallery__box-cards gallery__box-cards_js">
- 
+      <div class="gallery__btn gallery__btn_open-modal gallery__btn_open-modal_js">Add photo</div>
+
+      <div class="gallery__modal gallery__modal_js">
+        <div class="gallery__modal-content">
+          <textarea placeholder="URL" type="text"
+            class="gallery__input gallery__input_url gallery__input_url_js"></textarea>
+          <textarea placeholder="Commnet" type="text"
+            class="gallery__input gallery__input_comment gallery__input_comment_js"></textarea>
+          <div class="gallery__btn gallery__btn_add-post gallery__btn_add-post_js">Add post</div>
+        </div>
       </div>
+
+      <div class="gallery__modal-big-img gallery__modal-big-img_js">
+        <img src="" class="gallery__img-big gallery__img-big_js">
+      </div>
+
+      <div class="gallery__box-cards gallery__box-cards_js">
+      </div>
+
+
     </div>
   </div>
 </div>
